<resources>
    <string name="app_name">Pet Shop</string>
    <string name="buttonText">Get Started</string>
    <string name="signInButton">Sign In</string>
    <string name="signUpButton">Sign Up</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="head1">The Pet Kingdom</string>
    <string name="head2">Every pet lover want good food for their pet. </string>
    <string name="viewpager_content_description">Swipe through pages</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="logo">Logo</string>
    <string name="head3">Beginning ,</string>
    <string name="head4">Your Pet FOOD Journey !</string>
    <string name="hint1">Username</string>
    <string name="hint2">Password</string>
    <string name="register">If You are not register User ?</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="menu">menu icon</string>
    <string name="profile">Profile Image</string>
    <string name="greeting_text">Hi, Linda 👋</string>
    <string name="greeting">Good Evening!</string>
    <string name="accessories">Accessories</string>
    <string name="popular">Popular Items</string>
    <string name="favourite_icon">favourite icon</string>
    <string name="pedigree_for_dog">Pedigree</string>
    <string name="pedigree_price">$22</string>
    <string name="meowmix">MeowMix</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="meowMix_price">$30</string>
    <string name="your_pet_favourite_food_section">Your Pet Favourite Food Section !</string>
    <string name="the_dog_kingdom">The Dog Kingdom</string>
    <string name="k_25">$25</string>
    <string name="k1_32">$32</string>
    <string name="kikland">Kikland</string>
    <string name="bakers">Bakers</string>
    <string name="kibbles">Kibbles</string>
    <string name="the_cat_kingdom">The Cat Kingdom</string>
    <string name="friskies">Friskies</string>
    <string name="_9_lives">9 Lives</string>
    <string name="one">One</string>
    <string name="the_bird_kingdom">The Bird Kingdom</string>
    <string name="budgie">Budgie</string>
    <string name="menu_bird">Menu</string>
    <string name="rio">Rio</string>
    <string name="peanuts">Peanuts</string>
    <string name="dog_profile">Dog Profile</string>
    <string name="cat_profile">Cat profile</string>
    <string name="bird_profile">Bird Profile</string>
    <string name="your_pet_accessories_in_here">Your Pet Accessories in Here..</string>
    <string name="neck_colar">Neck Colar</string>
    <string name="harnes">Harnes</string>
    <string name="cat_colar">Cat Colar</string>
    <string name="travel_bag">Travel Bag</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="description">Description :</string>
    <string name="heda3">How to Choose the Right Adult Dog Food Based on Your Dog’s Needs</string>
    <string name="heda2">How to Transition Your Dog to Adult Food</string>
    <string name="logout">Logout</string>
    <string name="if_you_want_to_contact_us">If you Want to Contact us ?</string>
    <string name="contact_us">Contact</string>
    <string name="contact_pet_shop">Contact-Pet Shop</string>
    <string name="your_name">Your Name :</string>
    <string name="your_phone">Your Phone :</string>
    <string name="phone_number">phone number</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="your_comment">Your Comment :</string>
    <string name="linda_edward">Linda Edward</string>
    <string name="lgmail">Linda2@gmail.com</string>
    <string name="user_name">User Name:</string>
    <string name="change">Change</string>
    <string name="password">Password :</string>
    <string name="mobile">Mobile:</string>
    <string name="_1234_5678_9876">1234-5678-9876</string>
    <string name="e_mail">E-Mail :</string>
    <string name="ad1">Address :</string>
    <string name="postal_code">Postal Code :</string>
    <string name="_8220">8220</string>
    <string name="save">save</string>
    <string name="cash">Cash</string>
    <string name="card">Credit Card</string>
    <string name="method">Select Payment Method</string>
    <string name="des1">Made with high quality whole grains, protein and omega-6 fatty acids, PEDIGREE Small Dog Food helps your canine look and feel their best. Best of all, our oral care kibble gently cleans their teeth with every bite. No high fructose corn syrup, no artificial flavors, and no added sugar</string>
    <string name="des2">Kirkland Signature\'s Super Premium Complete Adult Dog Food is made with chicken, rice and vegetables. Enriched with antioxidants, Super Premium dog food is designed to meet all of the nutritional needs of your pet</string>
    <string name="des3">Known for its great taste and quality ingredients, Bakers Dog Food provides complete nutrition that supports your dog\'s health and vitality. With a range of flavours and formulations to suit dogs of all sizes and life stages, Bakers offers the perfect blend of protein, vitamins, and minerals</string>
    <string name="des4">Kibble, in simple terms, is dog food containing meat, grains, and vegetables that are dried and reshaped into small pellet-sized pieces. It is a popular choice for many pet owners as it can provide your dog with all the nutrients they require for a healthy lifestyle.</string>
    <string name="cat1">With the delicious flavors of chicken, turkey, salmon, and ocean fish, cats ask for Meow Mix Original Choice cat food by name. It\'s the perfect mix to help you connect with your cat over a healthy meal. A single morning serving will allow your cat to nibble freely throughout the day</string>
    <string name="cat2">FRISKIES® Adult Indoor Delights Dry Cat Food is formulated to promote healthy weight and help control hairballs with flavours of salmon, tuna, chicken, beef and vegetables that your cat will enjoy!</string>
    <string name="cat3">9Lives® 9Lives Outdoor Complete Dry Cat Food ,Made with the flavors of chicken and ocean fish, this whisker-licking cat kibble is Morris-approved for outdoor cats. Each tasty bite contains essential nutrients, like protein to provide energy and taurine to help support vision and a healthy heart.</string>
    <string name="cat4">If you own a cat, you may wonder what the best dry cat food is so you can make sure she’s getting the nutrition she needs. Our natural, highly digestible formulas* have real meat as the #1 ingredient and added vitamins, minerals and nutrients to help support your cat’s whole body health. Plus, our high protein, grain free True Instinct cat food offers nutrition your cat will crave. You could see a healthy difference in 28 days or less. </string>
    <string name="ac1">A piece of material put around the neck of certain pet animals, such as dogs, cats, or pigs, for control, identification, or other purposes. Identification tags and medical information is often placed on collars</string>
    <string name="ac2">Dog harnesses are either over-the-head or step-in style, meaning they are put on over your dog\'s head or by sliding up over your dog\'s front legs. Most step in harnesses only have a back ring for leash attachment, while over-the-head harness styles may have a chest ring, back ring, or both.</string>
    <string name="ac3">A cat collar is a piece of material put around the neck of a cat. Cat collars are put on cats by their owners for identification, fashion, protection (as from fleas), restraint, or to warn off prey, and may be worn by cats that are indoor-only as well as cats with outdoor access.</string>
    <string name="ac4">When your pet flies from one country to another, they will travel as manifest air cargo in the cargo section of the aeroplane. You don\'t need to be on the same flight as your pet if he or she is checked in as manifest cargo. Some airlines let your pet fly as accompanied excess baggage, usually on domestic flight</string>
    <string name="bird1">A nutritionally suitable diet for budgies is pelleted food formulated for small birds. Several commercial brands of pellets are available in different shapes, sizes, and colors. Pellets have been developed to meet most of your bird\'s nutritional needs</string>
    <string name="bird2">The Menu range of food provides a delicious and nourishing diet for birds. It contains essential vitamins to prevent deficiencies and ensures a sufficient supply of iodine, minerals and trace elements. It also includes beta-glucans to boost immunity and has a balanced ratio of calcium and phosphorous</string>
    <string name="bird3">RIO Daily feed for parrots is a mixture of specially selected healthy grains and seeds loved by parrots. The wide variety of ingredients ensures that birds get all the necessary nutrition substances.</string>
    <string name="bird4">Peanuts are a traditional bird food, being high in oil and loved by a wide range of bird species. You can also feed our smaller feathered friends and their young with kibbled peanuts which are very close to bird\'s natural diet. Robins and Great Tits will love kibbled peanuts.</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="new_task">New Task</string>
    <string name="taskSAve">Save</string>
    <string name="checkbox">checkbox</string>
    <string name="new_time">New Time</string>
    <string name="pet_tasks">Pet Tasks</string>
    <string name="start">Start</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="add_time">Add Time</string>
    <string name="sec_time_left">sec time left</string>
    <string name="pet_training_timer">Pet Training Timer</string>
    <string name="set_time_left">Set Time Left</string>
    <string name="enter_hours">Enter Hours</string>
    <string name="enter_minutes">Enter Minutes</string>
    <string name="enter_seconds">Enter Seconds</string>
    <string name="time_up">Time is up!</string>
</resources>