<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center">

   <ImageView
       android:layout_width="400dp"
       android:layout_height="400dp"
       android:src="@drawable/cat"
       android:layout_gravity="center"
       android:fitsSystemWindows="true"
       android:contentDescription="@string/cat"
       />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/head1"
       android:textColor="@color/text1"
       android:textSize="28sp"
       android:textStyle="bold"
       android:gravity="center"/>

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/head2"
       android:textColor="@color/text2"
       android:fontFamily="sans-serif-medium"
       android:gravity="center"
       android:layout_marginTop="4dp"/>



</LinearLayout>