<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ContactUsPage">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text1"
        app:itemIconTint="@color/icon"
        app:itemTextColor="@color/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/profile"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_image"
                app:shapeAppearanceOverlay="@style/circular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/background"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_pet_shop"
                        android:textAlignment="center"
                        android:textColor="@color/button"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_name"
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/button"/>

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:autofillHints="username"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/baseline_person_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint1"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColor="@color/text1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_phone"
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/button"/>

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:autofillHints="phone number"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/baseline_phone_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:padding="8dp"
                        android:textColor="@color/text1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_e_mail"
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/button"/>


                    <EditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:autofillHints="e-mail"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/text1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_comment"
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/button"/>

                    <EditText
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_edittext"
                        android:drawablePadding="8dp"
                        android:inputType="phone"
                        android:padding="8dp"
                        android:textColor="@color/text1"
                        tools:ignore="SpeakableTextPresentCheck" />


                    <Button
                        android:id="@+id/submit"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Submit Contact"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/custom_button"/>







                </LinearLayout>




            </androidx.cardview.widget.CardView>





        </androidx.constraintlayout.widget.ConstraintLayout>





    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>