<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/etHours"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/enter_hours"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/maxblue"
        android:textColorHint="@color/minblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMinutes"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/enter_minutes"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/maxblue"
        android:textColorHint="@color/minblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHours" />


    <EditText
        android:id="@+id/etSeconds"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginTop="136dp"
        android:hint="@string/enter_seconds"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/maxblue"
        android:textColorHint="@color/minblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMinutes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_bg"
        android:text="ok"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSeconds"
        />


</androidx.constraintlayout.widget.ConstraintLayout>